src/main/java/com/example/voting_system/error/VoteException.java
package com.example.voting_system.error;

public class VoteException extends AppException {
    public VoteException(String message) {
        super(message);
    }
}
